# mini-projeto-02

./: .commitlintrc.json  .env.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  Mini-Projeto Avaliativo - Módulo 2 .md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: conventional-commits.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml  commitlint.yml  pr-title.yml
data/mocks/fontes/: DEPLOY-001.json  DEPLOY-002.json  DEPLOY-003.json  DEPLOY-004.json  INCIDENTE-001.json  INCIDENTE-002.json  INCIDENTE-003.json  SPRINT-001.json  SPRINT-002.json  SPRINT-003.json
data/mocks/metricas/: indicadores.json
data/mocks/templates/: relatorio_tecnico.json
docs/: CHECKLIST-ENTREGA.md  ESTRUTURA-TRABALHO.md  prompts.md
docs/apresentacao/: slides.md
examples/: entrada.md  saida.md
src/: __init__.py  config.py  graph.py  main.py  state.py
src/mini_projeto/: __init__.py  __main__.py  main.py
src/nodes/: __init__.py  analyze_data.py  generate_report.py  load_context.py  stubs.py  use_tool.py  validate_input.py
src/prompts/: __init__.py  system.py
src/tools/: __init__.py  read_mock_file.py  write_report.py
tests/: conftest.py  test_analyze_data.py  test_fontes_mocks.py  test_generate_report.py  test_graph_e2e.py  test_load_context.py  test_main.py  test_read_mock_file.py  test_tools_io.py  test_use_tool.py  test_validations.py  test_write_report.py
