[project]
name = "mini-projeto"
version = "0.1.0"
description = "Mini-Projeto Avaliativo - Módulo 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mini-projeto = "mini_projeto.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_projeto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
